# telegram-to-gdocs-archiver

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG_RU.md  CONTRIBUTING.md  CONTRIBUTING_RU.md  LICENSE  QUICKSTART.md  QUICKSTART_RU.md  README.md  README_RU.md  SETUP_GIT.md  SETUP_RU.md  coverage.xml  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md  ISSUE_TEMPLATE_RU.md
.github/workflows/: ci.yml
config/: env.example  logging.yaml
src/: __init__.py  main.py
src/config/: constants.py  settings.py
src/exceptions/: custom.py
src/google/: __init__.py  auth.py  docs_client.py  formatter.py
src/storage/: cache.py  state.py
src/telegram/: client.py  handlers.py  models.py
src/utils/: decorators.py  helpers.py  logger.py
tests/: test_handlers.py
